--- a/homeapp/templates/homeapp/home.html
+++ b/homeapp/templates/homeapp/home.html
@@ -61,10 +61,10 @@
                 {% for p in myprojects %}
                 <ul>
                     <li>{{ p.p1 }}</li>
-                    <small><a href=" https://github.com/mak-19/DjangoBlogWebsite.git" target="_blank">Github
+                    <small><a href="https://github.com/mak-19/DjangoBlogWebsite.git" target="_blank">Github
                             Repository Link</a></small>
                     <li>{{ p.p2 }}</li>
-                    <small><a href=" https://github.com/mak-19/DjangoBlogWebsite.git" target="_blank">Github
+                    <small><a href="https://github.com/mak-19/Portfolio" target="_blank">Github
                             Repository Link</a></small>
                     <li>{{ p.p3 }}</li>
                     <li>{{ p.p4 }}</li>
