home.html modified 1

--- a/homeapp/templates/homeapp/home.html
+++ b/homeapp/templates/homeapp/home.html
@@ -44,12 +44,6 @@
                 {% for s in myskills %}
                 <ul>
                     <li>{{ s.s1 }}</li>
-                    <li>{{ s.s2 }}</li>
-                    <li>{{ s.s3 }}</li>
-                    <li>{{ s.s4 }}</li>
-                    <li>{{ s.s5 }}</li>
-                    <li>{{ s.s6 }}</li>
-                    <li>{{ s.s7 }}</li>
                 </ul>
                 {% endfor %}
             </div>
@@ -64,7 +58,7 @@
                     <small><a href="https://github.com/mak-19/DjangoBlogWebsite.git" target="_blank">Github
                             Repository Link</a></small>
                     <li>{{ p.p2 }}</li>
-                    <small><a href="https://github.com/mak-19/Portfolio" target="_blank">Github
+                    <small><a href="https://github.com/mak-19/Portfolio.git" target="_blank">Github
                             Repository Link</a></small>
                     <li>{{ p.p3 }}</li>
                     <li>{{ p.p4 }}</li>
